--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>draw-a-sketch!</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-    test!
+    <div id="control-panel"></div>
+    <div id="board"></div>
+    <script src="js/app.js" charset="utf-8"></script>
 </body>
 </html>
