--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <title>draw-a-sketch!</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <div id="control-panel"></div>
+    <div id="title-container"><h1>Etch-a-sketch</h1></div>
+    
+    <div id="control-panel">
+    <input id="color-picker" type="color">
+    <button class="button">a button</button>
+    <button class="button">another</button>
+    <button class="button" id="clear">clear</button>
+    </div>
     <div id="board"></div>
     <script src="js/app.js" charset="utf-8"></script>
 </body>
