--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <button class="button">a button</button>
     <button class="button">another</button>
     <button class="button" id="clear">clear</button>
+    <label for="gridSize">Size</label>
+    <input type="range" min="1" max="100" value="50" id="gridSize">
     </div>
     <div id="board"></div>
     <script src="js/app.js" charset="utf-8"></script>
