--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div id="control-panel">
     <input id="color-picker" type="color">
     <button class="button">a button</button>
-    <button class="button">another</button>
+    <button class="button" id="showGrid">grid</button>
     <button class="button" id="clear">clear</button>
-    <label for="gridSize">Size</label>
-    <input type="range" min="1" max="100" value="50" id="gridSize">
+    <label for="gridSize"></label>
+    <input type="range" min="1" max="50" value="25" id="gridSize">
     </div>
     <div id="board"></div>
     <script src="js/app.js" charset="utf-8"></script>
